--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:frontend": "pnpm --filter frontend dev",
     "dev:backend": "pnpm --filter backend start:dev",
     "build": "pnpm -r build",
-    "start": "pnpm --filter frontend start && pnpm --filter backend start"
+    "start": "pnpm --filter frontend start && pnpm --filter backend start",
+    "test:e2e": "jest --config test/jest-e2e.json"
   },
   "workspaces": [
     "apps/*",
