--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev:backend": "pnpm --filter backend start:dev",
     "build": "pnpm -r build",
     "start": "pnpm --filter frontend start && pnpm --filter backend start",
-    "test:e2e": "jest --config test/jest-e2e.json"
+    "test:e2e": "jest --config test/jest-e2e.json",
+    "prepare": "husky install"
   },
   "workspaces": [
     "apps/*",
@@ -22,6 +23,7 @@
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "concurrently": "^9.2.0"
+    "concurrently": "^9.2.0",
+    "husky": "^8.0.0"
   }
 }
