chore(auth): wire up logout, clean up AuthContext, prep dashboard + ProtectedLayout

--- a/package.json
+++ b/package.json
@@ -33,12 +33,8 @@
   },
   "lint-staged": {
     "apps/frontend/src/**/*.{ts,tsx}": [
-      "pnpm --filter frontend format",
-      "git add"
-    ],
-    "apps/frontend/public/**/*.{css,md}": [
-      "pnpm --filter frontend format",
-      "git add"
+      "cd apps/frontend && pnpm lint",
+      "cd apps/frontend && pnpm format"
     ]
   }
 }
